# litestar-honeytrap

./: .coverage  .env  .env.example  .pdm-python  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
app/: commands.py  configs.py  dependencies.py  exceptions.py  forms.py  main.py  models.py  plugins.py  router.py  settings.py
app/static/: app.css  quote.js  theme-switcher.js
app/templates/: counter.html  error.html  form.html  index.html  messages.html
app/templates/components/: field.html  form.html  switch.html
demo/: background.py  context.py  context2.py  timer.py
tests/: conftest.py
tests/integration/: conftest.py  test_cli.py  test_exeptions.py  test_feedback.py
tests/unit/: conftest.py  test_forms.py
